# fasta2a-poc

./: .env.example  .gitignore  README.md  agent_registry.db  config.json  pyproject.toml  run.py  test.json
examples/: simple_agent_example.py
migrations/agents/: classifier_agent.json  director_agent.json  summarizer_agent.json
src/: __init__.py  base.py  classifier_agent.py  cli.py  director_agent.py  main.py  run_all.py  summarizer_agent.py
src/agents/: __init__.py  base.py  director_worker.py  factory.py  generic_agent.py
src/core/: __init__.py  config.py  types.py
src/integrations/: __init__.py
src/integrations/adk/: __init__.py  helper.py  model.py
src/integrations/mcp/: __init__.py  api.py  demo.py  model.py
src/registry/: __init__.py  api.py  cli.py  database.py  loader.py  migrations.py  models.py  seed.py  service.py
tests/: __init__.py
tests/test_agents/: __init__.py
tests/test_core/: __init__.py
tests/test_integrations/: __init__.py
